[package]
name = "rusty-dnp3-api"
description = "Holds the DNP3 model and common API elements used by other rusty-dnp3 pacakges."

authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
thiserror = { workspace = true }