[package]
name = "rusty-dnp3-outstation"
description = "An implementation of a DNP3 outstation. This does not store any points. It acts as an API to a protocol."

authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
