[package]
name = "rusty-dnp3"
description = "An aggregate package of rusty-dnp3-master and rusty-dnp3-outstation."

authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
